Minor updated to build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "amd",
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
+        "declaration": true,
         "removeComments": true,
         "target": "es5",
         "noImplicitAny": true,
