--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple log capture library for JavaScript",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-ts": "tsc --declaration",
+    "build-ts": "tsc",
     "lint": "tsc --noEmit && eslint \"**/*.{ts}\" --quiet --fix"
   },
   "main": "dist/ss_log.js",
