--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "log",
+  "name": "@strangesecrets/web_log",
   "version": "0.0.2",
   "description": "Simple log capture library for JavaScript",
   "scripts": {
